# android-video-magnification

./: README.md  build.gradle  issue-backup.json  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/videomagnification/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PeakFinder.cpp  PeakFinder.h  cmplx.c  const.c  ellf.c  ellf.h  gdown_functions.cpp  gdown_functions.h  im_conv.cpp  im_conv.h  jniLogs.cpp  jniLogs.h  lpyr_functions.cpp  lpyr_functions.h  mtherr.c  native-lib.cpp  opencv-utils.cpp  opencv-utils.h  processing_functions.cpp  processing_functions.h  vector_functions.cpp  vector_functions.h
app/src/main/java/com/example/videomagnification/: App.java  Callback.java  Home.java  MagnificatorGdownIdeal.java  MainActivity.java  RegionOfInterest.java  Result.java  TaskRunner.java  VideoConverter.java  VideoEditor.java  VideoEditorLaplacianIdealButter.java  VideoEditorLaplacianIir.java  VideoEditorParameters.java  VideoMagnificator.java
app/src/main/java/com/example/videomagnification/activities/: Home.java  MainActivity.java  RegionOfInterest.java  VideoConverter.java  VideoEditor.java  VideoEditorParameters.java
app/src/main/java/com/example/videomagnification/application/: AccurateSeekBar.java  App.java  AppData.java
app/src/main/java/com/example/videomagnification/gui/input/: HomeActivity.java  VideoConverterActivity.java
app/src/main/java/com/example/videomagnification/gui/interaction/: RoiSelectorActivity.java  VideoEditorParametersActivity.java  VitalSignSelectorActivity.java
app/src/main/java/com/example/videomagnification/gui/processing/: NativeLibManagerActivity.java
app/src/main/java/com/example/videomagnification/magnificators/: MagnificationTask.java  Magnificator.java  MagnificatorFactory.java  MagnificatorGdownIdeal.java  MagnificatorLpyrButter.java  MagnificatorLpyrIdeal.java
app/src/main/java/com/example/videomagnification/processing/conversion/: ConversionTask.java  (+1 more)
app/src/main/java/com/example/videomagnification/threading/: Callback.java  Result.java  TaskRunner.java
app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_region_of_interest.xml  activity_video_converter.xml  activity_video_editor.xml  activity_video_editor_laplacian_ideal_butter.xml  activity_video_editor_laplacian_iir.xml  activity_video_editor_parameters.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/test/java/com/example/videomagnification/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
